8206254: Unable to complete emergency dump during safepoint

Reviewed-by: egahlin